@@ -2,6 +2,12 @@
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # $Id$
 
+  19 Dec 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Fix for
+	pkg settings being maintained after an unmerge.
+
+  19 Dec 2003; Nicholas Jones <carpaski@gentoo.org> pym/portage_db_*: Moved
+	to using cPickle instead of marshal. More standardization of the API.
+
   18 Dec 2003; Masatomo Nakano <nakano@gentoo.org> repoman: Added virtual
 	dependency check on each arch.
 
